--- a/_config.yml
+++ b/_config.yml
@@ -66,3 +66,8 @@ paths:
   blog: /blog/
   categories: /blog/categories/
   tags: /blog/tags/
+
+lean_cloud :
+  enable: true
+  app_id: gpBDukPmPqA6gFic9CG2DMBD-gzGzoHsz
+  app_key: K1HyjbA89uTyVEYGdiOPlkUx
